day04 과제 오류 수정

--- a/day03/ex01.html
+++ b/day03/ex01.html
@@ -11,7 +11,7 @@
     </div> 
     
     <div>
-            <button id  = " btn-submit"> submit  </button>
+            <button id  = "btn-submit">submit </button>
     </div>    
 
     <script>
@@ -21,11 +21,11 @@
 
         var btnSubmit = document.getElementById("btn-submit")
 
-        btnSubmit.addEventListener("click", () => {
+        btnSubmit.addEventListener('click', () => {
             var num1 = parseInt(inpNum1.value);
             var num2 = parseInt(inpNum2.value);
             var result = num1 + num2
-            console.log = (result)
+            console.log(result)
 
             inpResult.value = result
         })  
