--- a/day04/ex03.html
+++ b/day04/ex03.html
@@ -7,17 +7,17 @@
 </head>
 <body>
     <h1>도시를 선택하세요</h1>
-    <select>
-        <option value>서울</option>
-        <option value>천안</option>
-        <option value>세종</option>
-        <option value>공주</option>
-        <option value>익산</option>
-        <option value>정읍</option>
-        <option value>광주</option>   
+    <select id = "select-city">
+        <option value = "1">서울</option>
+        <option value = "2">천안</option>
+        <option value = "3">세종</option>
+        <option value = "4">공주</option>
+        <option value = "5">익산</option>
+        <option value = "6">정읍</option>
+        <option value = "7">광주</option>   
     </select>
 
-    <button id = "btn-submit">선택</button>
+    <button id = "btn-submit" >선택</button>
 
     <p id = "txt-result"></p>
 
@@ -26,7 +26,7 @@
         var btnSubmit = document.getElementById("btn-submit")
         var txtResult = document.getElementById("txt-result")
         btnSubmit.addEventListener("click", () => {
-            console.log(selectobj.value)
+            console.log(selectCity.value)
         
         txtResult.innerText =  "출발역  :   " + selectCity.value
         })
